# VoC-instance3

./: .gitignore  README.md  pyproject.toml
ML/: PYVIS_NETWORK_GUIDE.md  README.md  SECURITY_IMPROVEMENTS.md  WIKI_MODEL_IMPROVEMENTS.md  complaint_edges_clean.csv  complaint_nodes_clean.csv  complaint_similarity_network.html  complaint_word_network.html  custom_network.html  korean_complaint_word2vec_v6.py  korean_complaint_word2vec_v7.py  korean_complaint_word2vec_v8_by_category.py  pyproject.toml  reset_venv_312.sh  reset_venv_and_restore.sh  upload_to_postgres.py  upload_to_postgres_v1.py  wiki_word2vec copy.model  wiki_word2vec.model  서비스_network.html  품질_network.html
ML/dd/: complaint_similarity_network.html  complaint_word2vec.model  complaint_word_network.html  custom_network.html  wget-log  wiki_word2vec.model  서비스_network.html  품질_network.html
ML/env_not-used/: (deprecated).env  aws(hold).env
ML/testenv/: pyvenv.cfg
ML/word2vec_community_keyword(not used)/: 01_create_dummy_analysis_result_table.py  01_create_dummy_table.py  02-1_word2vec_export_edges.py  02-1_word2vec_export_edges_cleaned.py  02-1_word2vec_export_edges_grouped.py  02-1_word2vec_export_edges_topk.py  02_extract_community_central_keywords.py  02_generate_keyword_network.py  02_generate_keyword_network_filtered.py  02_generate_keyword_network_filtered_tuned.py  02_generate_keyword_network_filtered_tuned_v2.py  02_generate_keyword_network_filtered_tuned_v3.py  02_generate_keyword_network_filtered_tuned_v4.py  02_generate_keyword_network_filtered_tuned_v5.py  02_word2vec_edge_final_export.py  (+59 more)
(+28 files in other folders)
